namespace java com.igool.rpc.db.model.thrift
struct BusinessImageDTO {
			1:i32 businessId,
			2:i32 fileId,
			3:string businessType,
			4:i32 imageId,
			5:i32 businessTypeId
	}