namespace java com.igool.rpc.db.model.thrift
struct BusinessQszlRel {
			1:i32 businessQszlId,
			2:i32 businessId,
			3:i32 businessDetailId,
			4:string createTime,
			5:i32 createUser
	}