namespace java com.igool.rpc.db.model.thrift
struct DeliveryRel {
			1:i32 deliveryRelId,
			2:string deliveryId,
			3:i32 fileId,
			4:string createDate,
			5:i32 businessId
	}