namespace java com.igool.rpc.db.model.thrift
	struct FileInfo {
    			1:i32 fileId,
    			2:string fileCode,
    			3:string carCode,
    			4:string hpzl,
    			5:string hphm,
    			6:i32 status,
    			7:i32 ckStatus,
    			8:string carNumber
    	}